--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="header">
             <audio id="audioElement" loop class="audio" >
-                <source src="/Elliot James Reay - I Think They Call This Love.mp3" type="audio/mpeg" />
+                <source src="Elliot James Reay - I Think They Call This Love.mp3" type="audio/mpeg" />
                 Ваш браузер не поддерживает аудио элемент.
             </audio>
             <div class="audio-controls">
@@ -54,7 +54,7 @@
                 <h1 class="mapheader">Օրակարգ</h1>
                 <div class="place">
                     <div class="border"></div>
-                    <img src="/place1.png" class="placeimg" alt="">
+                    <img src="place1.png" class="placeimg" alt="">
                 </div>
                 <div class="placetexts">
                     <p class="placetext">Պսակադրությունը կանցկացվի
@@ -69,7 +69,7 @@
             <div class="card _anim-items">
                 <div class="place" id="img">
                     <div class="border"></div>
-                    <img src="/place2.png" class="placeimg" alt="">
+                    <img src="place2.png" class="placeimg" alt="">
                 </div>
                 <div class="placetexts">
                     <p class="placetext">Տոնական խնջույքը կանցկացվի
