--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://db.onlinewebfonts.com/c/dec54bf9723eb4c4a3d476765c688779?family=Bidena+trial" rel="stylesheet">
@@ -16,17 +17,17 @@
         href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
         rel="stylesheet">
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Հրավիրատոմս</title>
 </head>
 
 <body>
     <div class="hraver">
         <div class="convert">
-            <img class="converttop" src="http://up-skills.ru/test/envelope-top.svg" alt="">
-            <img class="convertbody" src="http://up-skills.ru/test/envelope.svg" alt="">
+            <img class="converttop" src="3.png" alt="">
+            <img class="convertbody" src="4.png" alt="">
         </div>
         <div class="header">
-            <audio id="audioElement" loop class="audio" >
+            <audio id="audioElement" loop class="audio">
                 <source src="Elliot James Reay - I Think They Call This Love.mp3" type="audio/mpeg" />
                 Ваш браузер не поддерживает аудио элемент.
             </audio>
@@ -40,7 +41,7 @@
         </div>
         <div class="later _anim-items">
             <h1 class="latetext1">Սիրելի' հյուրեր,</h1>
-            <h2 class="latetext2">Ցանկանում ենք Ձեզ հետ կիսել մեր կյանքի կարևորագույն օրերից մեկը։ մեծ ուրախությամբ
+            <h2 class="latetext2">Ցանկանում ենք Ձեզ հետ կիսել մեր կյանքի կարևորագույն օրերից մեկը։ Մեծ ուրախությամբ
                 հրավիրում ենք Ձեզ մեր հարսանյաց արարողությանը։</h2>
         </div>
         <div class="calendar _anim-items">
@@ -95,7 +96,7 @@
                 </div>
                 <div class="plantext">
                     <h2 class="time">14:00</h2>
-                    <h3>Պսակադրության արարողություն</h3>
+                    <h3 class="plantext2">Պսակադրության արարողություն</h3>
                 </div>
             </div>
             <div class="plan _anim-items">
@@ -109,14 +110,14 @@
                 </div>
                 <div class="plantext">
                     <h2 class="time">17:00</h2>
-                    <h3>Հյուրերի դիմավորում</h3>
+                    <h3 class="plantext2">Հյուրերի դիմավորում</h3>
                 </div>
             </div>
             <div class="plan _anim-items">
                 <img src="plan2.png" alt="" class="planimg">
                 <div class="plantext">
                     <h2 class="time">17:30</h2>
-                    <h3>Հարսանեկան խնջույք</h3>
+                    <h3 class="plantext2">Հարսանեկան խնջույք</h3>
                 </div>
             </div>
         </div>
@@ -147,7 +148,14 @@
             <div class="footertext3 font">Mariam</div>
             <div class="footertext4 ">Սիրով սպասում ենք</div>
         </div>
+        <div class="ayan _anim-items">
+            <h2>Կայքը պատրաստված է</h2>
+            <a href="https://www.ayandesign.am/#home" target="_blank">
+                <img class="logo" src="logo.png" alt="">
+            </a>
+        </div>
     </div>
     </div>
 </body>
+
 </html>
