--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         Հասցե ` Արմենակ Արմենակյան փ, 99 (Նորք-Մարաշ)
                     </p>
                 </div>
-                <a href="" target="_blank" class="map">Քարտեզ</a>
+                <a href="https://maps.apple.com/?address=Yerevan,%20Armenia&auid=9768495353872343532&ll=40.186767,44.541106&lsp=9902&q=Norqi%20Surb%20Mariam%20Astvacacin%20Ekexeci&t=m" target="_blank" class="map">Քարտեզ</a>
             </div>
             <div class="card _anim-items">
                 <div class="place" id="img">
@@ -81,7 +81,7 @@
                         Էջմիածին, Աշտարակի խճուղի 1 շենք
                 </div>
                 </p>
-                <a href="" target="_blank" class="map">Քարտեզ</a>
+                <a href="https://maps.apple.com/?address=M-5,%20Armenia&auid=5005541142138644516&ll=40.176939,44.290373&lsp=9902&q=Nor%20Dvin&t=m" target="_blank" class="map">Քարտեզ</a>
             </div>
         </div>
         <div class="plans">
