--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
         <div class="later _anim-items">
             <h1 class="latetext1">Սիրելի' հյուրեր,</h1>
-            <h2 class="latetext2">Ցանկանում ենք Ձեզ հետ կիսել մեր կյանքի կարևորագույն օրերից մեկը։ Մեծ ուրախությամբ
-                հրավիրում ենք Ձեզ մեր հարսանյաց արարողությանը։</h2>
+            <h2 class="latetext2">Ցանկանում ենք Ձեզ հետ կիսել մեր կյանքի կարևորագույն օրերից մեկը։ <br>
+                Մեծ ուրախությամբ հրավիրում ենք Ձեզ մեր հարսանյաց արարողությանը։</h2>
         </div>
         <div class="calendar _anim-items">
             <h1 class="ctext1">Save the date</h1>
