--- a/index.html
+++ b/index.html
@@ -144,18 +144,20 @@
                 </div>
             </div>
         </div>
-        <div class="footer _anim-items">
-            <div class="footertext1 font">Arman</div>
-            <div class="footertext2 ">&</div>
-            <div class="footertext3 font">Mariam</div>
-            <div class="footertext4 ">Սիրով սպասում ենք</div>
-        </div>
-        <div class="ayan _anim-items">
-            <h2>Կայքը պատրաստված է</h2>
-            <h6>սեղմիր այստեղ</h6>
-            <a href="https://www.ayandesign.am/#home" target="_blank">
-                <img class="logo" src="logo.png" alt="">
-            </a>
+        <div class="foot _anim-items">
+            <div class="footer _anim-items">
+                <div class="footertext1 font">Arman</div>
+                <div class="footertext2 ">&</div>
+                <div class="footertext3 font">Mariam</div>
+                <div class="footertext4 ">Սիրով սպասում ենք</div>
+            </div>
+            <div class="ayan">
+                <h2>Կայքը պատրաստված է</h2>
+                <h6>սեղմիր այստեղ</h6>
+                <a href="https://www.ayandesign.am/#home" target="_blank">
+                    <img class="logo" src="logo.png" alt="">
+                </a>
+            </div>
         </div>
     </div>
     </div>
